--- a/test1.html
+++ b/test1.html
@@ -9,7 +9,7 @@
     <script src="json2.js" type="text/javascript"></script>
     <script src="xmlwriter.js" type="text/javascript"></script>
 
-    <script src="blitz-gmap3.js" type="text/javascript"></script>
+    <script src="blitz.gmap3.js" type="text/javascript"></script>
 
 </head>
 <body>
